Fix 404 + breadcrumb spacing

--- a/production/css/404.css
+++ b/production/css/404.css
@@ -21,7 +21,7 @@
     }
 
     .sj-text-page-not-found-explanation {
-      margin-top: var(--spacing-px-5) !important;
+      margin-top: var(--spacing-1) !important;
     }
   }
 
